@@ -1,3 +1,5 @@
+* #2240 Ensure activity uniquness in the shell. (marco)
+
 Snapshot f6f3f2b520
 
 * #2103 Use selection grey for progress in the browser entry. (marco)
